@@ -12,6 +12,10 @@ Release 2.7.1 - UNRELEASED
 
   BUG FIXES
 
+    YARN-4047. ClientRMService getApplications has high scheduler lock contention.
+    (Jason Lowe via jianhe)
+
+
     YARN-3351. AppMaster tracking URL is broken in HA. (Anubhav Dhoot via kasha)
 
 Release 2.7.0 - 2015-04-20
